--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   <link href="https://fonts.googleapis.com/css2?family=Bangers&family=Inter:wght@400;700&display=swap"
     rel="stylesheet" />
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js" defer></script>
-  <script src="../js/main.js" defer></script>
-  <link rel="stylesheet" href="../css/main.css" />
+  <script src="js/main.js" defer></script>
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 
 <body class="bg-[#A0E8F8]">
@@ -68,7 +68,7 @@
 
         <div class="flex-grow flex items-center justify-center">
           <a href="#" class="aspect-square flex items-center justify-center">
-            <img src="../assets/dino4.svg" alt="Dinosaurio 6"
+            <img src="assets/dino4.svg" alt="Dinosaurio 6"
               class="h-full w-full object-contain p-1 md:p-2 [filter:drop-shadow(0_6px_4px_rgba(0,0,0,0.25))]">
           </a>
         </div>
@@ -107,7 +107,7 @@
         <div class="w-full flex-grow flex items-end justify-center space-x-2 sm:space-x-4">
           <div class="dino-purple character w-16 h-20 sm:w-20 sm:h-24 md:w-24 md:h-28"></div>
           <a href="#" class="w-24 h-28 sm:w-28 sm:h-32 md:w-32 md:h-36">
-            <img src="../assets/dino6.svg" alt="Dinosaurio 6"
+            <img src="assets//dino6.svg" alt="Dinosaurio 6"
               class="h-full w-full object-contain [filter:drop-shadow(0_6px_4px_rgba(0,0,0,0.25))]">
           </a>
           <div class="dino-character character w-20 h-24 sm:w-24 sm:h-28 md:w-28 md:h-32"></div>
@@ -244,7 +244,7 @@
       <div class="w-full flex-grow flex items-end justify-center space-x-2 sm:space-x-4">
         <div class="dino-purple character w-16 h-20 sm:w-20 sm:h-24 md:w-24 md:h-28"></div>
         <a href="#" class="w-24 h-28 sm:w-28 sm:h-32 md:w-32 md:h-36">
-          <img src="../assets/dino6.svg" alt="Dinosaurio 6"
+          <img src="assets//dino6.svg" alt="Dinosaurio 6"
             class="h-full w-full object-contain [filter:drop-shadow(0_6px_4px_rgba(0,0,0,0.25))]">
         </a>
         <div class="dino-character character w-20 h-24 sm:w-24 sm:h-28 md:w-28 md:h-32"></div>
@@ -286,7 +286,7 @@
       <main class="w-full flex-grow flex items-center justify-center my-4">
         <div class="flex-grow flex items-center justify-center">
           <a href="#" class="aspect-square flex items-center justify-center">
-            <img src="../assets/dino4.svg" alt="Dinosaurio 6"
+            <img src="assets//dino4.svg" alt="Dinosaurio 6"
               class="h-full w-full object-contain p-1 md:p-2 [filter:drop-shadow(0_6px_4px_rgba(0,0,0,0.25))]">
           </a>
         </div>
@@ -332,7 +332,7 @@
       <!-- Acá iría el tablero -->
       <main class="w-full flex-grow flex items-center justify-center my-2">
         <div class="w-full max-w-4xl h-100 sm:h-64 md:h-120 flex items-center justify-center">
-          <img src="../assets/board.svg" alt="Tablero del juego">
+          <img src="assets/board.svg" alt="Tablero del juego">
         </div>
       </main>
 
@@ -341,39 +341,39 @@
         <!-- Acá iría el dado -->
         <div class="flex justify-center items-center mb-4">
           <div class="dice w-24 h-24 [filter:drop-shadow(0_6px_4px_rgba(0,0,0,0.25))] flex items-center justify-center">
-            <img src="../assets/dice.svg" alt="Dado del juego" />
+            <img src="assets/dice.svg" alt="Dado del juego" />
             </svg>
           </div>
         </div>
         <div class="grid grid-cols-3 sm:grid-cols-6 gap-2 md:gap-4 place-items-center">
 
           <a href="#" class="aspect-square flex items-center justify-center">
-            <img src="../assets/dino1.svg" alt="Dinosaurio 1"
+            <img src="assets/dino1.svg" alt="Dinosaurio 1"
               class="h-full w-full object-contain p-1 md:p-2 [filter:drop-shadow(0_6px_4px_rgba(0,0,0,0.25))]">
           </a>
 
           <a href="#" class="aspect-square flex items-center justify-center">
-            <img src="../assets/dino2.svg" alt="Dinosaurio 2"
+            <img src="assets/dino2.svg" alt="Dinosaurio 2"
               class="h-full w-full object-contain p-1 md:p-2 [filter:drop-shadow(0_6px_4px_rgba(0,0,0,0.25))]">
           </a>
 
           <a href="#" class="aspect-square flex items-center justify-center">
-            <img src="../assets/dino3.svg" alt="Dinosaurio 3"
+            <img src="assets/dino3.svg" alt="Dinosaurio 3"
               class="h-full w-full object-contain p-1 md:p-2 [filter:drop-shadow(0_6px_4px_rgba(0,0,0,0.25))]">
           </a>
 
           <a href="#" class="aspect-square flex items-center justify-center">
-            <img src="../assets/dino4.svg" alt="Dinosaurio 4"
+            <img src="assets/dino4.svg" alt="Dinosaurio 4"
               class="h-full w-full object-contain p-1 md:p-2 [filter:drop-shadow(0_6px_4px_rgba(0,0,0,0.25))]">
           </a>
 
           <a href="#" class="aspect-square flex items-center justify-center">
-            <img src="../assets/dino5.svg" alt="Dinosaurio 5"
+            <img src="assets/dino5.svg" alt="Dinosaurio 5"
               class="h-full w-full object-contain p-1 md:p-2 [filter:drop-shadow(0_6px_4px_rgba(0,0,0,0.25))]">
           </a>
 
           <a href="#" class="aspect-square flex items-center justify-center">
-            <img src="../assets/dino6.svg" alt="Dinosaurio 6"
+            <img src="assets/dino6.svg" alt="Dinosaurio 6"
               class="h-full w-full object-contain p-1 md:p-2 [filter:drop-shadow(0_6px_4px_rgba(0,0,0,0.25))]">
           </a>
 
