Add tracking mode button on profile screen

--- a/index.html
+++ b/index.html
@@ -302,6 +302,10 @@
           class="w-full bg-[#F58233] text-white font-bold py-3 rounded-xl text-xl sm:text-2xl shadow-lg border-b-4 border-orange-700 active:border-b-0 transition active:translate-y-1 duration-300 ease-in-out hover:bg-orange-600">
           Crear nueva partida
         </button>
+        <button
+          class="w-full bg-[#F58233] text-white font-bold py-3 rounded-xl text-xl sm:text-2xl shadow-lg border-b-4 border-orange-700 active:border-b-0 transition active:translate-y-1 duration-300 ease-in-out hover:bg-orange-600">
+          Modo seguimiento
+        </button>
       </footer>
     </div>
 
