Fix some responsive issues

--- a/index.html
+++ b/index.html
@@ -513,25 +513,25 @@
             </button>
           </header>
 
-          <!-- Acá iría el tablero -->
+          <!-- Acá iría el tablero - LA CONCHA DE LA LORA CON ESTE TABLERO DE MIERDA -->
           <main class="w-full flex-grow flex items-center justify-center my-2">
             <div
-              class="w-full max-w-4xl flex items-center justify-center h-[300px] sm:h-[350px] md:h-[400px] lg:h-[420px] xl:h-full"
+              class="w-full max-w-4xl flex items-center justify-center h-[40vh] sm:h-[50vh] md:h-[55vh] lg:h-[50vh]"
             >
               <img
                 src="assets/board.svg"
                 alt="Tablero del juego"
-                class="object-contain h-full w-full"
+                class="object-contain h-full w-full]"
               />
             </div>
           </main>
 
           <!-- Contenedor para las cosas -->
-          <footer class="w-full max-w-4xl mx-auto bg-white/20 backdrop-blur-sm rounded-t-3xl p-4">
+          <footer class="w-full max-w-4xl mx-auto bg-white/20 backdrop-blur-sm rounded-t-3xl p-2 sm:p-3">
             <!-- Acá iría el dado -->
             <div class="flex justify-center items-center mb-2">
               <div
-                class="dice w-16 h-16 sm:w-20 sm:h-20 [filter:drop-shadow(0_6px_4px_rgba(0,0,0,0.25))] flex items-center justify-center"
+                class="dice w-12 h-12 sm:w-14 sm:h-14 lg:w-16 lg:h-16 [filter:drop-shadow(0_4px_3px_rgba(0,0,0,0.25))] flex items-center justify-center"
               >
                 <img src="assets/dice.svg" alt="Dado del juego" />
               </div>
