Fix some responsive issues

--- a/index.html
+++ b/index.html
@@ -527,7 +527,9 @@
           </main>
 
           <!-- Contenedor para las cosas -->
-          <footer class="w-full max-w-4xl mx-auto bg-white/20 backdrop-blur-sm rounded-t-3xl p-2 sm:p-3">
+          <footer
+            class="w-full max-w-4xl mx-auto bg-white/20 backdrop-blur-sm rounded-t-3xl p-2 sm:p-3"
+          >
             <!-- Acá iría el dado -->
             <div class="flex justify-center items-center mb-2">
               <div
