--- a/index.html
+++ b/index.html
@@ -513,7 +513,7 @@
             </button>
           </header>
 
-          <!-- Acá iría el tablero - LA CONCHA DE LA LORA CON ESTE TABLERO DE MIERDA -->
+          <!-- Acá el tablero - LA CONCHA DE LA LORA CON ESTE TABLERO DE MIERDA -->
           <main class="w-full flex-grow flex items-center justify-center my-2">
             <div
               class="w-full max-w-4xl flex items-center justify-center h-[40vh] sm:h-[50vh] md:h-[55vh] lg:h-[50vh]"
@@ -521,7 +521,7 @@
               <img
                 src="assets/board.svg"
                 alt="Tablero del juego"
-                class="object-contain h-full w-full]"
+                class="object-contain h-full w-full"
               />
             </div>
           </main>
