--- a/index.html
+++ b/index.html
@@ -411,22 +411,45 @@
             >
               ¡Hola, Facundo!
             </div>
-            <button class="p-2 rounded-full hover:bg-white/50 transition">
-              <svg
-                class="w-8 h-8 text-slate-700"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
+            <div class="relative">
+              <button
+                onclick="toggleProfileDropdown(event)"
+                class="p-2 rounded-full hover:bg-white/50 transition"
               >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z"
-                ></path>
-              </svg>
-            </button>
+                <svg
+                  class="w-8 h-8 text-slate-700"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z"
+                  ></path>
+                </svg>
+              </button>
+              <div
+                class="profile-dropdown hidden absolute right-0 mt-2 w-48 bg-white/90 backdrop-blur-sm rounded-lg shadow-xl z-20 text-left"
+              >
+                <div class="py-1">
+                  <a
+                    href="#"
+                    onclick="event.preventDefault(); showScreen('screen-lobby'); closeAllDropdowns(null);"
+                    class="block px-4 py-2 text-md text-slate-700 font-semibold hover:bg-orange-400/50 transition-colors duration-200"
+                    >Mi Perfil</a
+                  >
+                  <a
+                    href="#"
+                    onclick="event.preventDefault(); showScreen('screen-home'); closeAllDropdowns(null);"
+                    class="block px-4 py-2 text-md text-slate-700 font-semibold hover:bg-orange-400/50 transition-colors duration-200"
+                    >Cerrar Sesión</a
+                  >
+                </div>
+              </div>
+            </div>
           </header>
 
           <!-- Acá está el perfil del usuario -->
@@ -495,22 +518,45 @@
             >
               Ronda 1
             </div>
-            <button class="p-2 rounded-full hover:bg-white/50 transition">
-              <svg
-                class="w-8 h-8 text-slate-700"
-                fill="none"
-                stroke="currentColor"
-                viewBox="0 0 24 24"
-                xmlns="http://www.w3.org/2000/svg"
+            <div class="relative">
+              <button
+                onclick="toggleProfileDropdown(event)"
+                class="p-2 rounded-full hover:bg-white/50 transition"
               >
-                <path
-                  stroke-linecap="round"
-                  stroke-linejoin="round"
-                  stroke-width="2"
-                  d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z"
-                ></path>
-              </svg>
-            </button>
+                <svg
+                  class="w-8 h-8 text-slate-700"
+                  fill="none"
+                  stroke="currentColor"
+                  viewBox="0 0 24 24"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    stroke-linecap="round"
+                    stroke-linejoin="round"
+                    stroke-width="2"
+                    d="M5.121 17.804A13.937 13.937 0 0112 16c2.5 0 4.847.655 6.879 1.804M15 10a3 3 0 11-6 0 3 3 0 016 0z"
+                  ></path>
+                </svg>
+              </button>
+              <div
+                class="profile-dropdown hidden absolute right-0 mt-2 w-48 bg-white/90 backdrop-blur-sm rounded-lg shadow-xl z-20 text-left"
+              >
+                <div class="py-1">
+                  <a
+                    href="#"
+                    onclick="event.preventDefault(); showScreen('screen-lobby'); closeAllDropdowns(null);"
+                    class="block px-4 py-2 text-md text-slate-700 font-semibold hover:bg-orange-400/50 transition-colors duration-200"
+                    >Mi Perfil</a
+                  >
+                  <a
+                    href="#"
+                    onclick="event.preventDefault(); showScreen('screen-home'); closeAllDropdowns(null);"
+                    class="block px-4 py-2 text-md text-slate-700 font-semibold hover:bg-orange-400/50 transition-colors duration-200"
+                    >Cerrar Sesión</a
+                  >
+                </div>
+              </div>
+            </div>
           </header>
 
           <!-- Acá el tablero - LA CONCHA DE LA LORA CON ESTE TABLERO DE MIERDA -->
