Add top padding to app title

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- Pantalla de inicio -->
         <div id="screen-home" class="hidden flex-col flex-grow items-center justify-between h-full">
           <h1
-            class="font-bangers text-5xl sm:text-6xl md:text-7xl text-[#F58233] sm:mt-4"
+            class="font-bangers text-5xl pt-4 sm:text-6xl md:text-7xl text-[#F58233] sm:mt-4"
             style="text-shadow: 1px 1px 2px #ffffff"
           >
             DRAFTOSAURUS
